Fix for alignment of menu list items having children.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -234,12 +234,19 @@ html, body {
     position: relative;
     > .dropdown-menu{
         display: block;
-        right: 100%;
+        left:100%;
         top: 0px;
         margin-top: -2px;
         margin-left: -2px;
-      &.pull-left{
-        left:100%;
+      &.dropinline-menu {
+        position: relative;
+        float: none;
+        left: 0 !important;
+      }
+      &.pull-right{
+        float: right !important;
+        left: -100% !important;
+        width: 0 !important;
       }
     }
     &.pull-left{
@@ -1856,8 +1863,6 @@ If the height and width are not specified the video takes the height of the post
     color:#D3D3D3;
   }
   > label.caption {
-    overflow: hidden;
-    text-overflow: ellipsis;
     position: absolute;
     left: 100%;
     top: 0;
